--- a/polls/templates/polls/main.html
+++ b/polls/templates/polls/main.html
@@ -1,8 +1,8 @@
 {% extends 'index.html' %}
 {% block title %}Главная страница{% endblock %}
 
-{% block NavBar %}
-<li class="disabled"><a style="color: green;">Добавление</a></li>
+{% block NavBar %}<!-- 
+<li class="disabled"><a style="color: green;">Добавление</a></li> -->
 {% endblock %}
 
 
