--- a/polls/templates/polls/DS/DSDetail.html
+++ b/polls/templates/polls/DS/DSDetail.html
@@ -6,14 +6,22 @@
 	{% block title %}Подробная Информация{% endblock %}
 	{% block NavBar %}
 
-<button class="btn btn-info btn-lg detail" onclick="location.href='/polls/DS/{{ docsources.id }}/Update'">
-	<span class="glyphicon glyphicon-pencil"></span>  
-	Редактировать
-</button> 
-<button class="btn btn-danger btn-lg detail" href="{% url 'polls:DSDelete' docsources.id %}">
-	<span class="glyphicon glyphicon-trash"></span>
-	Удалить
-</button>
+
+<li style="margin-top: 1px; margin-left: 100px;">
+	<button class="btn btn-info btn-lg detail" alt="Редактировать" onclick="location.href='/polls/DS/{{ docsources.id }}/Update'">
+		<span class="glyphicon glyphicon-pencil"></span>  
+		
+	</button>
+</li>
+<li style="margin-top: 1px; margin-left: 10px;">
+	<form action="{% url 'polls:DSDelete' docsources.id %}" method="post" class="inline">
+	{% csrf_token %}
+		<input type="hidden" name="id" value="{{ docsources.id }}" />
+		<button type="submit" class="btn btn-danger btn-lg">
+			<span class="glyphicon glyphicon-trash"></span>
+		</button>
+	</form>
+</li>
 {% endblock %}
 
 	{% block content %}
@@ -58,15 +66,6 @@
 		</div><br>
 	</div>
 
-
-
-<form action="{% url 'polls:DSDelete' docsources.id %}" style="display: inline;">
-	{% csrf_token %}
-	<input type="hidden" name="docsources_id" value="{{ docsources.id }}" />
-	<button type="submit" class="btn btn-danger btn-lg detail">
-		<span class="glyphicon glyphicon-trash"></span>
-	</button>
-</form>
 
 
 
