--- a/polls/templates/polls/List/LOT.html
+++ b/polls/templates/polls/List/LOT.html
@@ -2,7 +2,7 @@
 {% block title %}Title List{% endblock %}
 
 {% block NavBar %}
-<li><a href="{% url 'polls:DSCreate' %}">Добавление</a></li>
+<li><a href="{% url 'polls:LOTCreate' %}">Добавление</a></li>
 {% endblock %}
 class="btn" data-toggle="modal" data-target="#myModal" 
 
@@ -24,13 +24,13 @@ class="btn" data-toggle="modal" data-target="#myModal"
 					</tr>
 				</thead>
 				<tbody>
-					{% for TitleList in context %}
+					{% for LaunchOperationTypes in context %}
 						<div class="row ">
-								<tr class="limit" align="center" title="{{TitleList.doc_note }}">
-									<td class="col-md-1 tit ">{{ TitleList.id }}</td>
-									<td class="col-md-1 tit">{% if TitleList.ready == True %} <span class="glyphicon glyphicon-ok green"></span> {% else %} <span class="glyphicon glyphicon-remove red "></span> {% endif %}</td>
-<!-- 									<td class="col-md-3 " >{{ TitleList.title }}</td> -->
-									<td class="col-md-10 " >{{ TitleList.doc_specification }}</td>
+								<tr class="limit" align="center" title="{{LaunchOperationTypes.doc_note }}" onclick="location.href='/polls/LOT/{{ LaunchOperationTypes.id }}'">
+									<td class="col-md-1 tit ">{{ LaunchOperationTypes.id }}</td>
+									<td class="col-md-1 tit">{% if LaunchOperationTypes.ready == True %} <span class="glyphicon glyphicon-ok green"></span> {% else %} <span class="glyphicon glyphicon-remove red "></span> {% endif %}</td>
+<!-- 									<td class="col-md-3 " >{{ LaunchOperationTypes.title }}</td> -->
+									<td class="col-md-10 " >{{ LaunchOperationTypes.doc_specification }}</td>
 								</tr>
 						</div>	
 
