--- a/polls/templates/polls/List/TL.html
+++ b/polls/templates/polls/List/TL.html
@@ -3,9 +3,8 @@
 
 {% block NavBar %}
 <li><a href="{% url 'polls:TLCreate' %}">Добавление</a></li>
-<li><button type="button" href="{% url 'polls:TLCreate' %}" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button></li>
+
+
 {% endblock %}
 
 {% block content %}
@@ -63,6 +62,26 @@
 
 {% block add %}
 
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+{% include 'add.html'%}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changesdfbsjahbk fbcvb</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 {% endblock %}
