--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -28,10 +28,19 @@
 
 	  		{% endblock %}
 	    </ul>
-	    <!-- <ul class="nav navbar-nav navbar-right" style="margin-right: 30px;" >
-	      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-	      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-	    </ul> -->
+
+
+		{% if user.username %}
+		<ul class="nav navbar-nav navbar-right" style="margin-right: 30px;" >
+		  <li><a href="#"><span class="glyphicon glyphicon-user"></span>      {{ user.username }}</a></li>
+		  <li><a href="/polls/logout/"><span class="glyphicon glyphicon-log-out"></span> Выход</a></li>
+		</ul>
+		{% else %}
+		<ul class="nav navbar-nav navbar-right" style="margin-right: 30px;" >
+		  <li><a onclick="location.href='/polls/register/';"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+		  <li><a onclick="location.href='/polls/login/';"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+		</ul>
+		{% endif %}
   	</div>
 </nav>
 
@@ -57,6 +66,10 @@
 
 
         {% endblock %}
+        {% block add %}
+			
+
+        {% endblock %}
 
 
 
@@ -68,22 +81,19 @@
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h4 class="modal-title" id="exampleModalLabel">New Data</h4>
+					<h4 class="modal-title" id="exampleModalLabel">New message</h4>
 				</div>
 				<div class="modal-body">
-
-
-					<form class="form-horizontal" action="" method="post" enctype="multipart/form-data" >
-				{% csrf_token %}
-				{% include 'add.html'%}
+					<form>
 						<div class="form-group">
-							<div class="col-sm-offset-8 col-sm-10">
-								<button type="submit" class="btn btn-success"  >Submit</button>
-							</div>
+							<label for="recipient-name" class="form-control-label">Recipient:</label>
+							<input type="text" class="form-control" id="recipient-name">
+						</div>
+						<div class="form-group">
+							<label for="message-text" class="form-control-label">Message:</label>
+							<textarea class="form-control" id="message-text"></textarea>
 						</div>
 					</form>
-
-
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -103,6 +113,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> <!-- or use local jquery -->
 <script src="{% static 'polls/js/jqBootstrapValidation.js' %}"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+{% block scripts %}
+    <script src="../static/js/index.js"></script>
+{% endblock %}
 </body>
 </html>
 
